Cambios en clases

--- a/MasPorMenos.WebApi/appsettings.json
+++ b/MasPorMenos.WebApi/appsettings.json
@@ -8,7 +8,7 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
 
-    "conex": "Data Source=SINA216DTTKG;Initial Catalog=Arq;Integrated Security=True; TrustServerCertificate=true;"
+    "conex":""
 
   }
 }
